--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    width: 960px;
+    max-width: 960px;
     margin: auto;
     background-color: #eae5e5;
 }
@@ -13,7 +13,6 @@ header {
     color: #4d4d4d;
     margin-left: 80px;
     margin-top: 20px;
-    margin-bottom: 10px;
 }
 
 #header {
@@ -23,6 +22,7 @@ header {
 
 #subheading {
     font-size: 15px;
+    line-height: 50%;
 }
 
 #active {
@@ -32,7 +32,7 @@ header {
 .navbar a {
     color: #4d4d4d;
     text-align: center;
-    padding: 60px 50px;
+    padding: 55px 50px 0px 50px;
     text-decoration: none;
     font-size: 12px;
     font-weight: bold;
@@ -58,7 +58,8 @@ img {
     height: 300px;
     float: left;
     padding-right: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
+    padding-left: 40px;
 }
 
 #hello {
@@ -66,7 +67,7 @@ img {
     font-size: 70px;
     font-weight: bold;
     line-height: 0%;
-    margin-bottom: 0%;
+    padding: 0px 0px 0px 30px;
 }
 
 #me {
@@ -74,60 +75,75 @@ img {
     font-size: 30px;
     font-weight: bold;
     line-height: 0%;
+    padding: 0px 0px 0px 30px;
 }
 
 .midnav {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    width: 40%;
 }
-
-.midnav:link {
-    color: #eae5e5;
-}
-
 
 #myresume {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-color: #E83556;
-    color: #eae5e5;
     font-size: 10px;
+    color: #eae5e5;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
+    border-radius: 50%;
+    width: 125px;
+    height: 125px;
+    margin: 0px 10px 0px 50px;
+    border: none;
+    background-color: #E83556;
+}
+
+#myresume:hover {
+    background: rgb(168, 3, 3);
 }
 
 #mywork {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-color: #61cfd3;
-    color: #eae5e5;
     font-size: 10px;
+    color: #eae5e5;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-decoration: none;
+    border-radius: 50%;
+    width: 125px;
+    height: 125px;
+    margin: 0px 10px 0px 10px;
+    border: none;
+    background-color: #61cfd3;
+}
+
+#mywork:hover {
+    background: #3f8688;
 }
 
 #myskills {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    background-color: #d1c825;
-    color: #eae5e5;
     font-size: 10px;
+    color: #eae5e5;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-decoration: none;
+    border-radius: 50%;
+    width: 125px;
+    height: 125px;
+    margin: 0px 0px 0px 10px;
+    border: none;
+    background-color: #d1c825;
+}
+
+#myskills:hover {
+    background: #857f18;
 }
 
 #para {
+    width: 90%;
+    padding-left: 20px;
     color: #4d4d4d;
     font-size: 12px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 footer {
-    padding-top: 15px;
+    padding-top: 30px;
     text-align: center;
     color: #eae5e5;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -135,6 +151,5 @@ footer {
     clear: both;
     background: #E83556;
     height: 60px;
-    border-top-color: #eae5e5;
-    border-top-width: 20px;
+    font-weight: bold;
 }
